# peertalk

./: .clang-format  .eleventy.js  .gitignore  .jscpd.json  .mcp.json.example  CLAUDE.md  CMakeLists.txt  Dockerfile.test.build  IMPLEMENTATION_SUMMARY.md  METRICS_DASHBOARD.md  Makefile  Makefile.retro68  README.md  TEST_GAP_ANALYSIS.md  docker-compose.test.yml  index.njk  isr-report.html  package-lock.json  package.json  static-analysis.njk  test-results.njk
.claude/: COMPONENT_REVIEW.md  REVIEW_SUMMARY.md  settings.example.json  settings.json
.claude/agents/: cross-platform-debug.md
.claude/evals/: README.md  build-test.json  check-isr-validate.json  implement-session.json  review-plan.json  session-next.json  session-status.json
.claude/hooks/: adsp-userflags.sh  coverage-check.sh  isr-safety-check.sh  quick-compile.sh
.claude/rules/: appletalk.md  build-requirements.md  classic-mac-hardware.md  github-workflows.md  isr-safety.md  mactcp.md  opentransport.md
.github/workflows/: ci.yml  claude.yml  deploy-dashboard.yml  docker.yml  nightly-analysis.yml  nightly.yml
_data/metrics/: 2026-02-04.json  2026-02-07.json  latest.json
_includes/layouts/: base.njk
assets/css/: dashboard.css
books/: Inside Macintosh - Text.txt  Inside Macintosh Volume I, II, III - 1985.txt  Inside_Macintosh_Volume_IV_1986.txt  Inside_Macintosh_Volume_VI_1991.txt  Inside_Macintosh_Volume_V_1986.txt  MacTCP_Programmers_Guide_1989.txt  MacTCP_programming.txt  NetworkingOpenTransport.txt  Programming_With_AppleTalk_1991.txt  VintageMacTCPIP_Reference.md
coverage/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage/core/: direct_buffer.c.func-sort-c.html  direct_buffer.c.func.html  direct_buffer.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  peer.c.func-c.html  peer.c.func-sort-c.html  peer.c.func.html  peer.c.gcov.html  protocol.c.func-c.html  protocol.c.func-sort-c.html  protocol.c.func.html  protocol.c.gcov.html  (+24 more)
dashboard/: .eleventy.js  README.md  index.njk  static-analysis.njk  test-results.njk
docker/: Dockerfile  Dockerfile.posix  docker-compose.test.yml  docker-compose.yml
docs/: CLAUDE-CODE-SETUP.md  STARTER-TEMPLATE.md
include/: peertalk.h  pt_log.h
plan/: CI-IMPROVEMENTS.md  CSEND-LESSONS.md  PHASE-0-LOGGING.md  PHASE-1-FOUNDATION.md  PHASE-10-GATEWAY-BRIDGING.md  PHASE-2-PROTOCOL.md  PHASE-3-QUEUES.md  PHASE-3.5-SENDEX-API.md  PHASE-4-POSIX.md  PHASE-5-MACTCP.md  PHASE-5A-MAC-TESTING.md  PHASE-6-OPENTRANSPORT.md  PHASE-7-APPLETALK.md  PHASE-8-UI.md  PHASE-9-INTEGRATION.md  PHASE-async-pipelining.md  PROJECT_GOALS.md  QA-TESTING.md  REFACTOR-performance-20260208_170549.md  WORKFLOW.md
scripts/: build-launcher.sh  build-mac-tests.sh  docker-build.sh  docker-compile.sh  docker-shell.sh  test-discovery-docker.sh
src/log/: CMakeLists.txt  pt_log_mac.c  pt_log_posix.c
tests/: test_api_errors.c  test_backpressure.c  test_batch_send.c  test_bidirectional.c  test_common.h  test_compat.c  test_connect_posix.c  test_connection.c  test_direct_buffer.c  test_discovery_posix.c  test_discovery_recv.c  test_error_strings.c  test_foundation.c  test_helpers.c  test_integration_full.c  test_integration_posix.c  test_isr_safety_compile.c  test_isr_safety_mactcp.c  test_isr_safety_ot.c  test_log_perf.c  test_log_posix.c  test_log_threads.c  test_loopback_messaging.c  test_messaging_posix.c  test_peer.c  test_perf_benchmarks.c  test_protocol.c  test_protocol_fuzz.c  test_protocol_messaging.c  test_queue.c  test_queue_advanced.c  test_queue_extended.c  test_queue_threads.c  test_queue_unity.c  test_sendex.c  test_stats_posix.c  test_streaming.c  test_tcp_send_recv.c  test_two_tier_queue.c  test_udp_posix.c
tools/: analyze.sh  requirements.txt  setup-dashboard.sh  setup.sh
(+159 files in other folders)
